# work-journal-summarizer

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  TODO.md  pyproject.toml
config/: config.example.yaml
launchd/: com.das.heartbeat.plist  com.sck.smart-pigeon-replies.plist  com.sck.smart-pigeon.plist  com.sck.work-journal-summarizer-replies.plist  com.sck.work-journal-summarizer.plist
scripts/: install-scheduled-jobs.sh  uninstall-scheduled-jobs.sh
src/summarizer/: __init__.py  __main__.py  config.py  email_sender.py  heartbeat.py  journal.py  main.py  reply_processor.py  summarize.py
