[project]
name = "summarizer"
version = "0.1.0"
description = "Bi-weekly work journal summarizer with Claude API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.150.0",
    "pyyaml>=6.0",
]

[project.scripts]
summarizer = "summarizer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/summarizer"]
